--- a/HTML_040_parallax/css/section.css
+++ b/HTML_040_parallax/css/section.css
@@ -40,6 +40,7 @@ section#contents article {
   line-height: 100vh;
   background-size: cover;
   background-attachment: fixed;
+  scroll-behavior: smooth;
 }
 
 article#art1 {
